--- a/css/modal.css
+++ b/css/modal.css
@@ -1,3 +1,9 @@
+@media (max-width: 760px) {
+ .js .modal {
+    padding: 0.8rem;
+  }
+}
+
 .modal-container {
   height: 100vh;
   width: 100%;
@@ -43,7 +49,7 @@
   height: 50px;
   border:  4px solid white;
   border-radius: 50%;
-  box-shadow: 0 4px 4px 0 rgba(0,0,0, .3); 
+  box-shadow: 0 4px 4px 0 rgba(0,0,0, .3);
   background: #E54;
   font-size: 1.2em;
   color: #FFF;
@@ -66,7 +72,7 @@
   font-family: 'IBM Plex Mono', monospace;
 }
 .modal button[type="submit"] {
-  font-family: 'IBM Plex Mono', monospace; 
+  font-family: 'IBM Plex Mono', monospace;
   display: block;
   background: #E54;
   border-radius: 4px;
