Alterações no texto da descrição e o contador.
Adicionado novos textos e criado uma sessão de contador de animais.

--- a/css/modal.css
+++ b/css/modal.css
@@ -52,10 +52,11 @@
   border-radius: 50%;
   box-shadow: 0 4px 4px 0 rgba(0,0,0, .3);
   background: #E54;
-  font-size: 1em;
+  font-size: 1.5em;
   color: #FFF;
   top: -30px;
   right: -30px;
+  font-family: 'IBM Plex Mono', monospace;
   cursor: pointer;
 }
 
