--- a/css/modal.css
+++ b/css/modal.css
@@ -56,7 +56,7 @@
   color: #FFF;
   top: -30px;
   right: -30px;
-  font-family: 'IBM Plex Mono', monospace;
+  font-family: Arial, Helvetica, sans-serif;Muda
   cursor: pointer;
 }
 
