--- a/css/modal.css
+++ b/css/modal.css
@@ -44,19 +44,23 @@
   animation: modal .3s forwards;
 }
 
-.fechar {
+i {
   position: absolute;
+  box-sizing: content-box;
   width: 50px;
   height: 50px;
   border:  4px solid white;
   border-radius: 50%;
   box-shadow: 0 4px 4px 0 rgba(0,0,0, .3);
   background: #E54;
-  font-size: 1.5em;
+  font-size: 2.5em;
+  line-height: 1.5em;
   color: #FFF;
+  padding-top: 8px;
+  text-align: center;
   top: -30px;
   right: -30px;
-  font-family: Arial, Helvetica, sans-serif;Muda
+  font-family: Arial, Helvetica, sans-serif;
   cursor: pointer;
 }
 
